[JBTM-3695] Removed unused/javax dependencies from RTS
[JBTM-3695] Removed unused/javax dependencies from txbridge

[JBTM-3695] Removed unused/javax dependencies from narayana-full

[JBTM-3695] Removed unused/javax dependencies from the root pom

--- a/at/pom.xml
+++ b/at/pom.xml
@@ -38,6 +38,7 @@ Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
   <properties>
     <checkstyle.skip>false</checkstyle.skip>
     <sortpom.skip>false</sortpom.skip>
+    <version.asm>3.3.1</version.asm>
   </properties>
   <build>
     <plugins>
