[JBTM-3658] LRA coordinator quarkus
removed profiles native and release

Update quarkus version and removing finalName from coordinator-quarkus

--- a/rts/lra-examples/lra-coordinator/pom.xml
+++ b/rts/lra-examples/lra-coordinator/pom.xml
@@ -46,7 +46,7 @@
                         <configuration>
                             <artifactItems>
                                 <artifactItem>
-                                    <groupId>org.jboss.narayana.rts</groupId>
+                                    <groupId>org.jboss.narayana.quickstart.rts.lra</groupId>
                                     <artifactId>lra-coordinator-quarkus</artifactId>
                                     <version>${project.version}</version>
                                     <classifier>runner</classifier>
