--- a/rts/lra-examples/pom.xml
+++ b/rts/lra-examples/pom.xml
@@ -46,6 +46,7 @@
     </plugins>
   </build>
   <modules>
+    <module>coordinator-quarkus</module>
     <module>lra-coordinator</module>
     <module>cdi-participant</module>
     <module>cdi-embedded</module>
