--- a/ArjunaJTA/maven/pom.xml
+++ b/ArjunaJTA/maven/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstart.jta</groupId>
         <artifactId>narayana-quickstarts-jta</artifactId>
-        <version>5.13.1.Final-SNAPSHOT</version>
+        <version>5.13.1.Final</version>
     </parent>
     <groupId>org.jboss.narayana.quickstart.jta</groupId>
     <artifactId>maven</artifactId>
