--- a/ArjunaJTA/object_store/pom.xml
+++ b/ArjunaJTA/object_store/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.jboss.narayana.quickstart.jta</groupId>
     <artifactId>narayana-quickstarts-jta</artifactId>
-    <version>5.13.1.Final-SNAPSHOT</version>
+    <version>5.13.1.Final</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <description>
