--- a/XTS/wsat-jta-multi_service/pom.xml
+++ b/XTS/wsat-jta-multi_service/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstart.xts</groupId>
         <artifactId>narayana-quickstarts-xts</artifactId>
-        <version>5.13.1.Final-SNAPSHOT</version>
+        <version>5.13.1.Final</version>
     </parent>
     <groupId>org.jboss.narayana.quickstart.txbridge.wsat-jta-multi_service</groupId>
     <artifactId>wsat-jta-multi_service-all</artifactId>
