--- a/agroal/pom.xml
+++ b/agroal/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.jboss.narayana.quickstart.jta</groupId>
     <artifactId>agoral</artifactId>
-    <version>5.13.1.Final-SNAPSHOT</version>
+    <version>5.13.1.Final</version>
 
     <dependencies>
         <dependency>
