--- a/compensating-transactions/travel-agent/pom.xml
+++ b/compensating-transactions/travel-agent/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstart.compensatingtransactions</groupId>
         <artifactId>narayana-quickstarts-compensations</artifactId>
-        <version>5.13.1.Final-SNAPSHOT</version>
+        <version>5.13.1.Final</version>
     </parent>
     <groupId>org.jboss.narayana.quickstart.compensations.travel-agent</groupId>
     <artifactId>travel-agent-all</artifactId>
