--- a/jca-and-hibernate/pom.xml
+++ b/jca-and-hibernate/pom.xml
@@ -27,7 +27,7 @@
     <parent>
         <artifactId>narayana-quickstarts-all</artifactId>
         <groupId>org.jboss.narayana.quickstart</groupId>
-        <version>5.13.1.Final-SNAPSHOT</version>
+        <version>5.13.1.Final</version>
     </parent>
     <groupId>org.jboss.narayana.quickstarts</groupId>
     <artifactId>jca-and-hibernate</artifactId>
