--- a/jts-docker/pom.xml
+++ b/jts-docker/pom.xml
@@ -28,7 +28,7 @@
     <parent>
         <artifactId>narayana-quickstarts-all</artifactId>
         <groupId>org.jboss.narayana.quickstart</groupId>
-        <version>5.13.1.Final-SNAPSHOT</version>
+        <version>5.13.1.Final</version>
     </parent>
     <groupId>org.jboss.narayana.quickstart.docker</groupId>
     <artifactId>jts-docker</artifactId>
