--- a/karaf/osgi-jta/pom.xml
+++ b/karaf/osgi-jta/pom.xml
@@ -26,7 +26,7 @@
 
     <groupId>org.jboss.narayana.quickstarts.osgi</groupId>
     <artifactId>osgi-jta-example</artifactId>
-    <version>5.13.1.Final-SNAPSHOT</version>
+    <version>5.13.1.Final</version>
 
     <name>Narayana Quickstarts: JBTM and OSGI</name>
     <description>Examples show how to use the narayana-osgi-jta in the karaf</description>
