--- a/rts/at/demo/pom.xml
+++ b/rts/at/demo/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <artifactId>restat-quickstarts</artifactId>
     <groupId>org.jboss.narayana.quickstart.rts</groupId>
-    <version>5.13.1.Final-SNAPSHOT</version>
+    <version>5.13.1.Final</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <packaging>war</packaging>
