--- a/rts/at/demo/uiwar/pom.xml
+++ b/rts/at/demo/uiwar/pom.xml
@@ -24,6 +24,6 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.narayana.examples</groupId>
   <artifactId>uiwar</artifactId>
-  <version>5.13.1.Final-SNAPSHOT</version>
+  <version>5.13.1.Final</version>
   <packaging>war</packaging>
 </project>
