--- a/rts/at/service/service1b/pom.xml
+++ b/rts/at/service/service1b/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstart.rts</groupId>
         <artifactId>service-quickstarts</artifactId>
-        <version>5.13.1.Final-SNAPSHOT</version>
+        <version>5.13.1.Final</version>
     </parent>
     <groupId>org.jboss.narayana.quickstart.rts</groupId>
     <artifactId>service1b</artifactId>
@@ -144,7 +144,7 @@
                 <dependency>
                     <groupId>org.jboss.narayana.rts</groupId>
                     <artifactId>restat-util</artifactId>
-                    <version>5.13.1.Final-SNAPSHOT</version>
+                    <version>5.13.1.Final</version>
                 </dependency>
             </dependencies>
             <build>
@@ -165,7 +165,7 @@
                             <dependency>
                                 <groupId>org.jboss.narayana.rts</groupId>
                                 <artifactId>restat-util</artifactId>
-                                <version>5.13.1.Final-SNAPSHOT</version>
+                                <version>5.13.1.Final</version>
                             </dependency>
                         </dependencies>
                         <configuration>
