--- a/rts/at/service/service2/pom.xml
+++ b/rts/at/service/service2/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstart.rts</groupId>
         <artifactId>service-quickstarts</artifactId>
-        <version>5.13.1.Final-SNAPSHOT</version>
+        <version>5.13.1.Final</version>
     </parent>
     <groupId>org.jboss.narayana.quickstart.rts</groupId>
     <artifactId>service2</artifactId>
