--- a/rts/at/simple/pom.xml
+++ b/rts/at/simple/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.jboss.narayana.quickstart.rts</groupId>
     <artifactId>restat-quickstarts</artifactId>
-    <version>5.13.1.Final-SNAPSHOT</version>
+    <version>5.13.1.Final</version>
   </parent>
   <groupId>org.jboss.narayana.quickstart.rts</groupId>
   <artifactId>simple</artifactId>
