--- a/rts/pom.xml
+++ b/rts/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <artifactId>narayana-quickstarts-all</artifactId>
     <groupId>org.jboss.narayana.quickstart</groupId>
-    <version>5.13.1.Final-SNAPSHOT</version>
+    <version>5.13.1.Final</version>
   </parent>
   <groupId>org.jboss.narayana.quickstart.rts</groupId>
   <artifactId>rts-quickstarts</artifactId>
