--- a/spring/camel-with-narayana-spring-boot/pom.xml
+++ b/spring/camel-with-narayana-spring-boot/pom.xml
@@ -27,7 +27,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstarts.spring</groupId>
         <artifactId>spring-all</artifactId>
-        <version>5.13.1.Final-SNAPSHOT</version>
+        <version>5.13.1.Final</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <groupId>org.jboss.narayana.quickstart.spring</groupId>
