--- a/XTS/raw-xts-api-demo/ear/pom.xml
+++ b/XTS/raw-xts-api-demo/ear/pom.xml
@@ -27,7 +27,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
         <artifactId>xts-demo-all</artifactId>
-        <version>5.13.1.Final</version>
+        <version>6.0.0.Final-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>xts-demo-ear</artifactId>
