--- a/compensating-transactions/mongodb-simple/pom.xml
+++ b/compensating-transactions/mongodb-simple/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstart.compensatingtransactions</groupId>
         <artifactId>narayana-quickstarts-compensations</artifactId>
-        <version>5.13.1.Final</version>
+        <version>6.0.0.Final-SNAPSHOT</version>
     </parent>
     <groupId>org.jboss.narayana.quickstart.compensations.mongodb-simple</groupId>
     <artifactId>mongodb-simple-all</artifactId>
