--- a/compensating-transactions/non-transactional_resource/pom.xml
+++ b/compensating-transactions/non-transactional_resource/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstart.compensatingtransactions</groupId>
         <artifactId>narayana-quickstarts-compensations</artifactId>
-        <version>5.13.1.Final</version>
+        <version>6.0.0.Final-SNAPSHOT</version>
     </parent>
     <groupId>org.jboss.narayana.quickstart.xts.non-transactional-resource</groupId>
     <artifactId>non-transactional-resource-all</artifactId>
