--- a/rts/lra-examples/lra-jwt/pom.xml
+++ b/rts/lra-examples/lra-jwt/pom.xml
@@ -4,7 +4,7 @@
     <parent>
       <groupId>org.jboss.narayana.quickstart.rts.lra</groupId>
       <artifactId>lra-examples</artifactId>
-      <version>5.13.1.Final</version>
+      <version>6.0.0.Final-SNAPSHOT</version>
     </parent>
     <groupId>org.jboss.narayana.quickstart.rts.lra</groupId>
     <artifactId>lra-jwt-examples</artifactId>
