--- a/rts/lra/pom.xml
+++ b/rts/lra/pom.xml
@@ -21,7 +21,7 @@
     <parent>
       <groupId>org.jboss.narayana.quickstart.rts</groupId>
       <artifactId>rts-quickstarts</artifactId>
-      <version>5.13.1.Final</version>
+      <version>6.0.0.Final-SNAPSHOT</version>
     </parent>
     <groupId>org.jboss.narayana.quickstart.rts.lra</groupId>
     <artifactId>lra-quickstarts</artifactId>
