--- a/at/tx-jakarta/pom.xml
+++ b/at/tx-jakarta/pom.xml
@@ -11,7 +11,7 @@
   <parent>
     <groupId>org.jboss.narayana.rts</groupId>
     <artifactId>restat</artifactId>
-    <version>5.13.1.Final-SNAPSHOT</version>
+    <version>5.13.1.Final</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>restat-api-jakarta</artifactId>
