--- a/at/webservice/pom.xml
+++ b/at/webservice/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.jboss.narayana.rts</groupId>
     <artifactId>restat</artifactId>
-    <version>5.13.1.Final</version>
+    <version>6.0.0.Final-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>restat-web</artifactId>
@@ -30,7 +30,7 @@
 
   <properties>
     <artifactId.name>restat-web</artifactId.name>
-    <version.artifactId>5.13.1.Final</version.artifactId>
+    <version.artifactId>6.0.0.Final-SNAPSHOT</version.artifactId>
     <version.override.org.jboss.spec.javax.servlet>1.0.0.Final</version.override.org.jboss.spec.javax.servlet>
   </properties>
   <dependencies>
