--- a/transactionaldriver/pom.xml
+++ b/transactionaldriver/pom.xml
@@ -33,9 +33,9 @@
   <name>Transactional Drivers Examples</name>
   <description>Examples of how transaction drivers could be used</description>
   <modules>
-<!--   jakarta TODO: fix transactionaldriver modules tests-->
+<!--   jakarta TODO: need dependency narayana-tomcat, not available jakarta version -->
 <!--     <module>transactionaldriver-and-tomcat</module> -->
 <!--     <module>transactionaldriver-jpa-and-tomcat</module> -->
-<!--     <module>transactionaldriver-standalone</module> -->
+    <module>transactionaldriver-standalone</module>
   </modules>
 </project>
