--- a/XTS/pom.xml
+++ b/XTS/pom.xml
@@ -37,7 +37,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
-        <version>2.6</version>
+        <version>3.0.0</version>
         <configuration>
           <skip>true</skip>
         </configuration>
@@ -46,10 +46,9 @@
   </build>
 
   <modules>
-<!--   jakarta TODO: https://issues.redhat.com/browse/JBTM-3679 -->
-<!--     <module>raw-xts-api-demo</module> -->
-<!--     <module>wsat-jta-multi_service</module> -->
-<!--     <module>wsat-jta-multi_hop</module> -->
-<!--     <module>ssl</module> -->
+     <module>raw-xts-api-demo</module>
+     <module>wsat-jta-multi_service</module>
+     <module>wsat-jta-multi_hop</module>
+     <module>ssl</module>
   </modules>
 </project>
